@@ -12,6 +12,7 @@
 	threads : added neko_gc_register_thread (but buggy, so not used)
 	mysql5 : added 5 hours network timeout while waiting for an answer
 	mysql5 : fixed some additional errors handling
+	vm : optimize object table - one word and one memory block saved per object
 
 2008-09-23 : 1.8.0
 	added mod_tora (neko application server)
